--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,15 +1,4 @@
 
-*{
-        margin: 0;
-        max-width: 100%;
-        padding: 0;
-        
-    }
-    p {
-        margin: 0 !important;
-        padding: 0;
-    }
-    
     #uni
     {
         font-size: 2vw;
@@ -19,17 +8,13 @@
         width: 10%;
         margin-left:10px;
     }
-    body{
-        background-color: #E5E8EB;
-
-            width: 100%;
-            background: var(--dark-blue);
-            overflow-x: hidden;
-            font-family: 'Poppins', sans-serif;
-
-            -webkit-transition: all 300ms linear;
-            transition: all 300ms linear; 
+    .img-pub
+    {
+   
+     text-align: center;
        
+   
+        
     }
 
     .school_logo {
@@ -41,9 +26,6 @@
         padding: 5px;
         border-radius: 1px;
     }
-  
- 
-
  
     .home_page {
 
@@ -356,16 +338,7 @@
        
          
     }
-    .post-img
-    {
-        position: absolute;
-      
-        max-width: 100%;
-        object-fit: contain;
-        max-height: 430px;
-        margin-left: 30%;
-   
-    }
+
     
     .text-pub
     {
@@ -383,7 +356,7 @@
         grid-template-columns: 9% 65% auto;
         grid-template-rows:100%;
         width: 96%;
-        border-bottom: 1px solid rgb(165, 165, 165);
+
 
     }
     .post-tag
@@ -419,10 +392,7 @@
         font-size:12px ;
     
     }
- .img-pub
- {
-     margin: auto;
- }
+
     .imgg
     {
         
